# DB_Apka

./: .gitignore  README.md  conf.py  pyproject.toml
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/: backend_app.doctree  mobile_app.doctree  user_app.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
_build/html/_modules/BackendApp/: postgres_app.html
_build/html/_modules/MobileApp/: db_defs.html  export_to_csv.html
_build/html/_modules/UserApp/: user_app.html
_build/html/_sources/: index.rst.txt
_build/html/_sources/docs/: backend_app.rst.txt  user_app.rst.txt
_build/html/docs/: backend_app.html  mobile_app.html  user_app.html
app/: db_defs.py  export_to_csv.py  main.py
app/BackendApp/: postgres_app.py
app/MobileApp/: CarMileage.db  db_defs.py  export_to_csv.py  main.py
app/UserApp/: main.py  user_app.py
backend_app/: postgres_app.py  user_app.py
docs/: mobile_app.rst
